--- a/2018.7-10月.md
+++ b/2018.7-10月.md
@@ -1,5 +1,5 @@
-###### 一、历程总结
-1. 心理转变的一个时期，开始明确的意识到金钱的重要性。  
+1. 流程总结
+   心理转变的一个时期，开始明确的意识到金钱的重要性。  
    开始以赚钱为目的进行写作。这里有一点特别注意，就是心理态度的转变。首先开始对学医进行考虑，因为国外医生的薪资。  
    最开始在豆瓣等地方找很便宜的稿子写，几块至几十。刚开始的态度非常好，有那种冲劲，把每个征稿人都备注为金主，看一看就能接受所有刁难。  
    挣到第一笔金之后给家里添置东西的感觉很好，大概是早期较少的美好回忆之一。  
