--- a/2018.7-10月.md
+++ b/2018.7-10月.md
@@ -1,18 +1,18 @@
-1. 流程总结
-   心理转变的一个时期，开始明确的意识到金钱的重要性。  
-   开始以赚钱为目的进行写作。这里有一点特别注意，就是心理态度的转变。首先开始对学医进行考虑，因为国外医生的薪资。  
-   最开始在豆瓣等地方找很便宜的稿子写，几块至几十。刚开始的态度非常好，有那种冲劲，把每个征稿人都备注为金主，看一看就能接受所有刁难。  
-   挣到第一笔金之后给家里添置东西的感觉很好，大概是早期较少的美好回忆之一。  
-   但有一点，就是太**急于求成**，这表现在知道合伙人的连续答题以及妈妈网的文。心里太急，总想快点赚到钱。不得不承认，这种东西除去早期很短一段时间新鲜感后，只会让人厌倦，甚至相当影响心情。  
-   还有体会，在于金钱是否能够战胜一切。体会了**为了钱做不喜欢的工作**的感觉，没有挑战性、长期、重复的工作不仅影响一个人的当下，还影响他未来的发展。这个是对**成就感**的探讨。  
-   七月属于新鲜期；八月是妈妈网的文，写到抑郁；九月意识到应该做让人有成长的工作，于是给野马投了两篇稿；十月基本上颓废，放弃一切，但是目光在变，接触了股市等等，这里要感谢“刘备教授”。  
-   但十月的转机在于看见那篇本以为废弃了的文被发表，今天10.25又有一篇文通过。不得不承认，野马是一个很适合我的公众号。  
-   关于金钱的一些体会，早期对于自媒体，意识到引流的重要性。另外，体会到仅仅有钱，完全不能带来一种动力。那种动力，就如同公开课里面说为什么要选择自己喜欢的工作，因为那样会有一种热情，一开始你做那个工作的时候，你的目的实际已经实现了，因为至少你很快乐。之后你所得到的东西是一种嘉奖，而你因为那份爱，也会自觉的去努力，去坚持。对于任何东西，失败都应该是一种不断会经历的过程，但是往往只有坚持下来的人会胜利。只有爱，才能支持一个人坚持下来。而假如对金钱的爱不足以支持这一点，结局就很可悲。  
-   对于写作还有一点心态的转变在于刚开始对于写作是相当抵触的态度，因为我总把写作当作逃避或者赚钱手段。但是如今却把写作当成了自己生命不可分割的一部分，因为这是一种思考，能让我成长，而且对我所追求的经济独立、自由有很大助力，我也能得到成就感和收益。  
-   但是对于金钱的探讨其实我并没有什么定论，因为有些东西你即使知道它的正确，但是你也不能确定自己的选择一定正确。  
-   总之，我希望做的是让我有成就感的工作。其实对于未来的期望，唉，不知道怎么说。选方向就像买期货吧，除了自己喜欢的不是期货，其他的不过是稳妥与否的评估。  
-   但是我觉得，我很倾向那种“有用”的东西，即可以应用的。比如一个程序、一种语言、一个能力。  
-   就像绝命毒师中一句磷遇水加热生成五氧化二磷，就让我对化学兴趣大增。  
+1. 历程总结  
+ 心理转变的一个时期，开始明确的意识到金钱的重要性。  
+ 开始以赚钱为目的进行写作。这里有一点特别注意，就是心理态度的转变。首先开始对学医进行考虑，因为国外医生的薪资。  
+ 最开始在豆瓣等地方找很便宜的稿子写，几块至几十。刚开始的态度非常好，有那种冲劲，把每个征稿人都备注为金主，看一看就能接受所有刁难。  
+ 挣到第一笔金之后给家里添置东西的感觉很好，大概是早期较少的美好回忆之一。  
+ 但有一点，就是太**急于求成**，这表现在知道合伙人的连续答题以及妈妈网的文。心里太急，总想快点赚到钱。不得不承认，这种东西除去早期很短一段时间新鲜感后，只会让人厌倦，甚至相当影响心情。  
+ 还有体会，在于金钱是否能够战胜一切。体会了**为了钱做不喜欢的工作**的感觉，没有挑战性、长期、重复的工作不仅影响一个人的当下，还影响他未来的发展。这个是对**成就感**的探讨。  
+ 七月属于新鲜期；八月是妈妈网的文，写到抑郁；九月意识到应该做让人有成长的工作，于是给野马投了两篇稿；十月基本上颓废，放弃一切，但是目光在变，接触了股市等等，这里要感谢“刘备教授”。  
+ 但十月的转机在于看见那篇本以为废弃了的文被发表，今天10.25又有一篇文通过。不得不承认，野马是一个很适合我的公众号。  
+ 关于金钱的一些体会，早期对于自媒体，意识到引流的重要性。另外，体会到仅仅有钱，完全不能带来一种动力。那种动力，就如同公开课里面说为什么要选择自己喜欢的工作，因为那样会有一种热情，一开始你做那个工作的时候，你的目的实际已经实现了，因为至少你很快乐。之后你所得到的东西是一种嘉奖，而你因为那份爱，也会自觉的去努力，去坚持。对于任何东西，失败都应该是一种不断会经历的过程，但是往往只有坚持下来的人会胜利。只有爱，才能支持一个人坚持下来。而假如对金钱的爱不足以支持这一点，结局就很可悲。  
+ 对于写作还有一点心态的转变在于刚开始对于写作是相当抵触的态度，因为我总把写作当作逃避或者赚钱手段。但是如今却把写作当成了自己生命不可分割的一部分，因为这是一种思考，能让我成长，而且对我所追求的经济独立、自由有很大助力，我也能得到成就感和收益。  
+ 但是对于金钱的探讨其实我并没有什么定论，因为有些东西你即使知道它的正确，但是你也不能确定自己的选择一定正确。  
+ 总之，我希望做的是让我有成就感的工作。其实对于未来的期望，唉，不知道怎么说。选方向就像买期货吧，除了自己喜欢的不是期货，其他的不过是稳妥与否的评估。  
+ 但是我觉得，我很倾向那种“有用”的东西，即可以应用的。比如一个程序、一种语言、一个能力。  
+ 就像绝命毒师中一句磷遇水加热生成五氧化二磷，就让我对化学兴趣大增。  
    
 2. 写作经验总结：
   - 就从最新的那篇关于选择不生育的文章而言，我发现我有一种错误，在于我误会了文章的重点。我喜欢吹嘘自我的经历，但是我的经历其实与主题无关，我可贩卖的经历也没有多少。
